@@ -2,6 +2,8 @@
 
 == 0.9.10 (Unreleased)
 
+* Performance Tuning: Cached templates
+* Performance Tuning: Cached routes
 * Danish translation [Thanks to Molte]
 * Russian translation [Thanks to Imm]
 * Added +extcore+ as a javascript option in project generator [Thanks to Imm]
